# raw-audio

./: .gitignore  README.md  pyproject.toml  train.py
configs/backbone/: comvo.yaml  crash.yaml  flow2gan.yaml  hifigan_v1.yaml  hifigan_v3.yaml  rfwave.yaml  stft_transformer.yaml  vocos.yaml  wavefm.yaml  waveform_transformer.yaml  wavenext.yaml
configs/data/: audio_directory.yaml
configs/eval/: preliminary.yaml
configs/experiment/: fd_finetune.yaml  fm_baseline.yaml  fm_oneshots_mars.yaml  fm_oneshots_mars_stft.yaml  fm_oneshots_mars_vocos.yaml  fm_oneshots_mars_waveform.yaml  fm_smoke.yaml  fm_wavenext_smoke.yaml  mf_column.yaml  mf_oneshots_mars_stft.yaml  mf_oneshots_mars_stft_scratch.yaml  mf_patched.yaml  mf_smoke.yaml
configs/flow/: fm.yaml  mf.yaml
configs/train/: default.yaml
docs/: flow_space_loss_candidates.md  fm_training_checklist.md  fm_training_notes.md  gpu_fm_validation_recipe.md  mf_implementation_spec.md
experiments/aux_losses/: aux_tmin_sweep.py  probe.py
experiments/backbone_rtf/: bench.py
experiments/cfg_sampling/: ab_mr_stft.sh  sweep.py
experiments/envelope_diag/: probe.py
experiments/envelope_diag/stft_capacity/: probe.py  sampling_probe.py
experiments/stft_frontends/: RESULTS.md  flow_space.py  followup.py  followup2.py  followup3.py  followup4.py  followup5.py  followup6.py  probe.py
experiments/wavenext_cond/: probe.py
export/: benchmark_onnx_rtf.py  export_backbone.py
matpac/: blocks.py  checkpoint.py  classifier.py  encoder.py  matpac.py  mel_frontend.py  pooler.py  predictor.py  wrapper.py
scripts/: benchmark_backbone.py  benchmark_backbone_rtf.py  benchmark_fm_sampling_xrt.py  clean_matpac_ckpt.py  crest_factor_check.py  model_stats.py  probe_max_batch.py  sample_fm.py  validate_fm_batch.py
src/: ema.py  fm_trainer.py  loggers.py  trainer.py  validation.py
src/backbone/: audio_ops.py  blocks.py  complex_blocks.py  conditioning.py  convnext.py  convnext_blocks.py  convnexts.py  factory.py  io.py  jvp_flash_attention.py  patching.py  transformer.py  transformer_blocks.py  transformers.py  unets.py
src/data/: audio_dataset.py  augmentations.py
src/emb/: audiomae.py  cdpam.py  clap.py  encodec.py  factory.py  matpac.py  mert.py  null.py  pann.py  random.py  vggish.py
src/eval/: audio_metrics.py
src/flow/: factory.py  fm.py  mf.py
src/losses/: audio.py  dist.py  perceptual.py  spec.py
src/optim/: __init__.py  muon.py
src/utils/: loggers.py
tests/: test_audio_losses.py  test_audio_metrics.py  test_backbone.py  test_dist.py  test_emb_differentiable.py  test_embeddings.py  test_fd_trainer.py  test_flow_matching.py  test_fm_scaffold.py  test_jvp_flash_attention.py  test_mean_flow.py  test_muon.py  test_patching.py  test_perceptual.py  test_spec_losses.py  test_trainer.py
wiki/: INDEX.md
wiki/concepts/: architecture.md  evaluation.md  inference.md  methods.md  post-training.md  representation-space.md
wiki/papers/: 2002.09797.md  2010.05646.md  2106.07431.md  2210.02410.md  2306.05708.md  2311.17042.md  2403.05010.md  2405.14867.md  2408.08019.md  2410.12557.md  2501.05441.md  2501.08316.md  2503.07565.md  2503.16689.md  2505.08175.md  2505.22450.md  2507.16884.md  2509.04394.md  2509.23299.md  2509.25127.md  2510.02300.md  2510.07979.md  2510.12586.md  2510.19110.md  2510.20771.md  2511.13720.md  2511.19797.md  2512.02012.md  2512.15657.md  2512.23278.md  2601.22158.md  2602.04770.md  2602.09024.md  2603.09936.md  2603.10592.md  2603.11589.md  2603.12245.md  2603.12366.md  2604.28190.md  2605.00329.md  (+6 more)
wiki/reports/: 2026-05-18-design-choices-menu.html  2026-05-26-rms-lift-crest-factor.html  2026-06-10-backbone-and-protocol.html  2026-06-10-fd-loss-audio-adaptation.html  backbone_rtf_results.md
