[project]
name = "raw-audio"
version = "0.1.0"
description = "Research on raw sample-space audio generative modeling"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.4",
    "torchaudio",
    "soundfile",
    "librosa",
    "numpy",
    "einops",
    "scipy",
    "matplotlib",
    "tqdm",
    "arxiv",
    "hydra-core",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

# Not a buildable package: uv just manages the venv and dependencies.
# Modules are imported from src/ via PYTHONPATH or pytest's pythonpath setting.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["src", "experiments", "scripts", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line-length handled by formatter
