[project]
name = "raw-audio"
version = "0.1.0"
description = "Research on raw sample-space audio generative modeling"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.4",
    "torchaudio",
    "torchvision",
    "soundfile",
    "librosa",
    "numpy",
    "einops",
    "scipy",
    "soxr",
    "matplotlib",
    "tqdm",
    "arxiv",
    "hydra-core",
    "wandb",
    "laion-clap",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

# Not a buildable package: uv just manages the venv and dependencies.
# Modules are imported from src/ via PYTHONPATH or pytest's pythonpath setting.
[tool.uv]
package = false

# Pin torch family to the CUDA 12.1 wheels so we resolve against this host's
# NVIDIA driver (545.x supports up to CUDA 12.3; cu124/cu130 wheels need newer).
[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["src", "experiments", "scripts", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line-length handled by formatter
